--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,28 @@
+name: Build arm64.so
 
+on:
+  push:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup NDK
+        uses: nttld/setup-ndk@v1
+        with:
+          ndk-version: r21d
+
+      - name: Build arm64.so
+        run: |
+          export NDK_PROJECT_PATH=.
+          ndk-build NDK_APPLICATION_MK=./Application.mk APP_BUILD_SCRIPT=./Android.mk
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: libcheat
+          path: ./libs/arm64-v8a/libcheat.so
